--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ Description: The World-Wide Hydrogeological Parameters DAtabase (WWHYPDA) is
 	possibly other R packages as well.
 Depends:
 	R (>= 3.2.2),
+	stats,
 	RSQLite
 License: MIT + file LICENSE
 Encoding: UTF-8
