- resolving the final warning from check() function - adding import statements to function files

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ Description: The World-Wide Hydrogeological Parameters DAtabase (WWHYPDA) is
 Depends:
 	R (>= 3.2.2),
 	stats,
+	DBI,
 	RSQLite
 License: MIT + file LICENSE
 Encoding: UTF-8
